--- a/index.html
+++ b/index.html
@@ -2,13 +2,25 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="stylesheet" href="css/style.css">
         <title>Simon</title>
     </head>
     <body>
 
+      <div class="container">
+
+        <div>
+
+          <span>Ricorda i numeri...</span>
+
+        </div>
+
+        <div id="timer"></div>
+
+      </div>
 
         <script src="js/script.js" charset="utf-8"></script>
-
     </body>
 </html>
