--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
     <head>
         <meta charset="utf-8">
         <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" href="css/style.css">
+
         <title>Simon</title>
     </head>
     <body>
 
       <div class="container">
 
-        <div>
 
-          <span>Ricorda i numeri...</span>
+        <button id="start" type="button" name="start">
+          PLAY
+        </button
 
-        </div>
+
+        <span>Ricorda i numeri...</span>
+
+
 
         <div id="timer"></div>
 
