--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
       <div class="container">
 
+        <h1 id="score">  </h1>
+
 
         <button id="start" type="button" name="start">
           PLAY
