--- a/index.html
+++ b/index.html
@@ -10,21 +10,35 @@
     </head>
     <body>
 
-      <div class="container">
-
-        <h1 id="score">  </h1>
-
+      <div class="container active">
 
         <button id="start" type="button" name="start">
           PLAY
-        </button
-
+        </button>
 
         <span>Ricorda i numeri...</span>
 
-
-
         <div id="timer"></div>
+
+      </div>
+
+      <div class="container2 invisible">
+
+        <button id="start" type="button" name="start">
+          PLAY AGAIN
+        </button>
+
+        <div>
+          <p>Punteggio ottenuto:</p>
+          <h1 id="score"> </h1>
+        </div>
+
+
+        <div>
+          <p>Hai ricordato i seguenti numeri:</p>
+          <h1 id="remember"> </h1>
+        </div>
+
 
       </div>
 
