--- a/index.html
+++ b/index.html
@@ -22,12 +22,9 @@
           <h1 id="remember"> </h1>
         </div>
 
-        <div class="result invisible">
-          <p>Se vuoi riprovare premi il tasto play</p>
-        </div>
-
-        <button id="start" type="button" name="start">
-          PLAY
+        <button id="start" class="btn active" type="button" name="start">
+          <a class="stgame">PLAY</a>
+          <a class="again invisible">PLAY AGAIN</a>
         </button>
 
         <span class="before active">Ricorda i numeri...</span>
